--- a/doc/gis_1.tex
+++ b/doc/gis_1.tex
@@ -6,7 +6,7 @@
 \date{}
 \begin{document}
 \maketitle
-
+\setlength{\parindent}{0in}
 \section{Treść zadania}
 
 Kliką danego grafu nazywamy podgraf, w którym każde dwa wierzchołki są ze sobą połączone. 
@@ -14,21 +14,21 @@ Należy zaprojektować algorytm do znajdowania największej kliki w danym grafie
 
 \section{Założenia}
 
-Wejściem dla algorytmu jest graf nieskierowany dany macierzą kwadratową rzędu n: 
+Wejściem dla algorytmu jest graf nieskierowany dany macierzą kwadratową rzędu n:
 
+\vspace{1.5\baselineskip}
 $ 
 \begin{array}{cccc}
-
 q_{0,0} & q_{1,0} & \ldots & q_{n-1,0} \\
 q_{0,1} & q_{1,1} & \ldots & q_{n-1,1} \\
 \vdots  & \vdots  & \ddots & \vdots  \\
 q_{0,n-1} & q_{1,n-1} & \ldots & q_{n-1,n-1} 
-
 \end{array}
 , q_{i,j} \in \{0,1\}, 0 < i,j < n
 $
-\\
-$q_{i,j}$ równe 0 oznacza, że wierzchołki i oraz j nie są połączone krawędzią. W przeciwnym razie, wierzchołki są połączone.
+\vspace{1.5\baselineskip}
+
+$q_{i,j}$ równe 0 oznacza, że wierzchołki i oraz j nie są połączone krawędzią. W~przeciwnym razie, wierzchołki są połączone.\\
 
 Wyjściem jest niepusty zbiór numerów wierzchołków, które tworzą największą klikę w podanym grafie.
 Wierzchołki numerujemy od 0 do $n-1$.
