--- a/doc/gis_1.tex
+++ b/doc/gis_1.tex
@@ -10,7 +10,7 @@
 \section{Treść zadania}
 
 Kliką grafu nazywamy podgraf, w którym każde dwa wierzchołki są ze sobą połączone.
-Największą kliką nazywamy klikę o największej liczbie wierzchołków.
+Największą kliką nazywamy klikę o~największej liczbie wierzchołków.
 Należy zaprojektować algorytm do znajdowania największej kliki w~danym grafie.
 
 \section{Założenia}
@@ -31,12 +31,12 @@ $
 
 $q_{i,j}$ równe 0 oznacza, że wierzchołki i oraz j nie są połączone krawędzią. W~przeciwnym razie, wierzchołki są połączone.
 \par\vspace{\baselineskip}
-Macierz jest dana w pliku tekstowym, w którym kolejne $q_{i,j}$ w wierszu $j$ są oddzielone conajmniej jednym znakiem białym. 
+Macierz jest dana w pliku tekstowym, w którym kolejne $q_{i,j}$ w wierszu $j$ są oddzielone co najmniej jednym znakiem białym. 
 Przez znak biały rozumiemy spację lub tabulator. $q_{i,j}$ różne od 0 będą traktowane jak 1.
 \par\vspace{\baselineskip}
-Wyjściem jest niepusty zbiór numerów wierzchołków, które tworzą największą klikę w podanym grafie. 
-Wierzchołki numerujemy od 0 do $n-1$. W grafie może istnieć więcej niż jedna największa klika.
-W takim przypadku algorytm zwróci dowolną z nich.
+Wyjściem jest niepusty zbiór numerów wierzchołków, które tworzą największą klikę w~podanym grafie. 
+Wierzchołki numerujemy od 0 do $n-1$. W~grafie może istnieć więcej niż jedna największa klika.
+W~takim przypadku algorytm zwróci dowolną z~nich.
 
 \section{Referencje}
 
