--- a/doc/gis_1.tex
+++ b/doc/gis_1.tex
@@ -4,9 +4,11 @@
 \title{\textbf{Poszukiwanie największej kliki w~grafie}}
 \author{Anna Stępień, Adam Stelmaszczyk}
 \date{}
+\setlength{\parindent}{0in}
+\renewcommand\refname{Referencje}
+
 \begin{document}
 \maketitle
-\setlength{\parindent}{0in}
 \section{Treść zadania}
 
 Kliką grafu nazywamy podgraf, w którym każde dwa wierzchołki są ze sobą połączone.
@@ -38,6 +40,8 @@ Wyjściem jest niepusty zbiór numerów wierzchołków, które tworzą najwięks
 Wierzchołki numerujemy od 0 do $n-1$. W~grafie może istnieć więcej niż jedna największa klika.
 W~takim przypadku algorytm zwróci dowolną z~nich.
 
-\section{Referencje}
-
+\section{Planowany sposób rozwiązania}
+Algorytm Brona-Kerboscha\cite{bk}
+\bibliographystyle{plain}
+\bibliography{references}
 \end{document}
