krótkie info o aplikacji i algorytmie

--- a/doc/gis_1.tex
+++ b/doc/gis_1.tex
@@ -40,8 +40,9 @@ Wyjściem jest niepusty zbiór numerów wierzchołków, które tworzą najwięks
 Wierzchołki numerujemy od 0 do $n-1$. W~grafie może istnieć więcej niż jedna największa klika.
 W~takim przypadku algorytm zwróci dowolną z~nich.
 
-\section{Planowany sposób rozwiązania}
-Algorytm Brona-Kerboscha\cite{bk}
+Realizowana aplikacja będzie pracowała w~trybie konsolowym, z~ewentualną możliwością specyfikacji dodatkowych parametrów.
+W~projekcie zostanie wykorzystany algorytm Brona--Kerboscha\cite{bk}.
+
 \bibliographystyle{plain}
 \bibliography{references}
 \end{document}
