modyfikacja treści zadania

--- a/doc/gis_1.tex
+++ b/doc/gis_1.tex
@@ -9,11 +9,13 @@
 
 \begin{document}
 \maketitle
-\section{Treść zadania}
+
+\section{Zadanie}
 
 Kliką grafu nazywamy podgraf, w którym każde dwa wierzchołki są ze sobą połączone.
 Największą kliką nazywamy klikę o~największej liczbie wierzchołków.
-Należy zaprojektować algorytm do znajdowania największej kliki w~danym grafie.
+
+Celem zadania jest realizacja aplikacji, która umożliwi znajdowanie największej kliki w~danym grafie oraz późniejszą analizę otrzymanych wyników.
 
 \section{Założenia}
 
