Wygładzenie stylistyczne jednego zdania

--- a/doc/gis_1.tex
+++ b/doc/gis_1.tex
@@ -14,8 +14,8 @@
 
 Kliką grafu nazywamy podgraf, w którym każde dwa wierzchołki są ze sobą połączone.
 Największą kliką nazywamy klikę o~największej liczbie wierzchołków.
-
-Celem zadania jest realizacja aplikacji, która umożliwi znajdowanie największej kliki w~danym grafie oraz późniejszą analizę otrzymanych wyników.
+Celem zadania jest implementacja wybranego algorytmu znajdującego największa klikę
+w grafie oraz analiza otrzymanych wyników.
 
 \section{Założenia}
 
