Poprawka "rzędu" macierzy

--- a/doc/gis_1.tex
+++ b/doc/gis_1.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt, a4paper]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{polski} 
+\usepackage{polski}
 \title{\textbf{Poszukiwanie największej kliki w~grafie}}
 \author{Anna Stępień, Adam Stelmaszczyk}
 \date{}
@@ -15,11 +15,11 @@
 Kliką grafu nazywamy podgraf, w którym każde dwa wierzchołki są ze sobą połączone.
 Największą kliką nazywamy klikę o~największej liczbie wierzchołków.
 Celem zadania jest implementacja wybranego algorytmu znajdującego największa klikę
-w grafie oraz analiza otrzymanych wyników.
+w~grafie oraz analiza otrzymanych wyników.
 
 \section{Założenia}
 
-Wejściem dla algorytmu jest graf nieskierowany dany macierzą kwadratową rzędu $n$:
+Wejściem dla algorytmu jest graf nieskierowany dany macierzą o~$n$~wierszach i~$n$~kolumnach:
 
 \bigskip
 $ 
