--- a/doc/gis_1.tex
+++ b/doc/gis_1.tex
@@ -164,7 +164,11 @@ Do reprezentacji grafu zostanie wykorzystana macierz sąsiedztwa, zaimplementowa
 Zbiory przechowujące wierzchołki zostaną zaimplementowane jako klasa $Vertices$ dziedzicząca po klasie $TreeSet$ języka Java.
 
 \section{Testy}
+Istotną częścią realizowanego zadania jest przeprowadzenie testów związanych zarówno z poprawnością zwracanych wyników jak również wpływem danych wejściowych na czas wykonania algorytmu.
 \subsection{Badanie poprawności zwracanych wyników}
+Do weryfikacji poprawności zwracanych przez algorytm wyników zostanie wykorzystana biblioteka igraph, która udostępnia m.in funkcję wyznaczającą maksymalne kliki w zadanym grafie. Podczas testowania planujemy wykorzystać dane zwrócone przez bibliotekę igraph jako rozwiązania referencyjne, które następnie posłużą do porównania z wynikami otrzymanymi przez zaimplementowany algorytm. Rozwiązanie, a więc największa klika zwrócona przez algorytm jest poprawna wtedy, gdy znajduje się na liście rozwiązań referencyjnych.
+
+Proces generowania rozwiązań referencyjnych oraz porównywania wyników zostanie zautomatyzowany.
 \subsection{Badanie czasu wykonania dla różnych typów grafów}
 
 \bibliographystyle{plain}
