--- a/doc/gis_1.tex
+++ b/doc/gis_1.tex
@@ -8,7 +8,7 @@
 \date{}
 \setlength{\parindent}{0in}
 \renewcommand\refname{Referencje}
-
+\makeatletter\renewcommand{\ALG@name}{}
 \begin{document}
 \maketitle
 \tableofcontents
