--- a/doc/gis_1.tex
+++ b/doc/gis_1.tex
@@ -114,6 +114,7 @@ Na poniższym listingu przedstawiona została podstawowa wersja algorytmu Brona-
 \end{algorithmic}
 \end{algorithm}
 
+Poniżej przedstawiona została zmodyfikowana wersja algorytmu, która zostanie wykorzystana do realizacji zadania.
 \begin{algorithm}[!htb]
 \caption{Algorytm Brona--Kerboscha (wersja rozszerzona)}\label{bron2}
 \begin{algorithmic}[1]
@@ -174,9 +175,9 @@ W przypadku, gdy zbiory $candidates$ i $not$ nie są puste, dla każdego wierzch
 
 Wynikiem działania algorytmu jest zbiór $biggest\_clique$, który początkowo inicjowany jest jako zbiór pusty. W przypadku, gdy znaleziona zostanie największa klika, zbiór ten zawiera wierzchołki ją tworzące.
 
-\subsection{Analiza złożoności}
+\subsection{Złożoność}
 Pesymistyczna złożoność przedstawionego algorytmu wynosi $O(3^{n/3})$ i wynika z górnego ograniczenia na liczbę maksymalnych klik w grafie o n wierzchołkach.
-Ze względu na fakt, iż algorytm jest silnie zależny zarówno od rozmiaru danych i typu zadanego na wejściu grafu, nie jest możliwe precyzyjne określenie średniej złożoności obliczeniowej.
+
 \section{Struktury danych}
 \paragraph{Graf}
 Do reprezentacji grafu zostanie wykorzystana macierz sąsiedztwa, zaimplementowana jako dwuwymiarowa tablica wartości boolowskich.
